@@ -1,3 +1,11 @@
+2012-12-02  Niels Möller  <nisse@lysator.liu.se>
+
+	Split sha.h into new files sha1.h and sha2.h.
+	* sha.h: Kept for compatibility, just includes both new files.
+	* sha1.h: New file.
+	* sha2.h: New file.
+	* Makefile.in (HEADERS): Added sha1.h and sha2.h.
+
 2012-11-28  Niels Möller  <nisse@lysator.liu.se>
 
 	From Fredrik Thulin:
